# lincheck-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  benchmark-faa-queue.txt  benchmark-ms-queue.txt  benchmark-set.txt  benchmark-treiber-stack-time-3.txt  benchmark-treiber-stack-time-5.txt  benchmarks-2025-01-23.txt  benchmarks-2025-02-01-2.txt  benchmarks-2025-02-01.txt  benchmarks-mx-no-renew-3.txt  benchmarks-mx-no-renew-5-wrong.txt  benchmarks-mx-no-renew-5.txt  benchmarks-mx-no-renew-7.txt  check_ctx_speed.sh
.github/workflows/: ci.yaml  clang-format.yaml  run-tests.yaml
benchmark/: plots.py
clangpass/: CMakeLists.txt  clangpass.cpp  clangpass_tool.cpp
clangpass/include/: clangpass.h
codegen/: CMakeLists.txt  coyieldpass.cpp  yieldpass.cpp
docs/: wg-dual.md
draft/: Makefile  codegen.cpp  codegen_mutex.cpp  lib.h  main.cpp  test.cpp
runtime/: CMakeLists.txt  generators.cpp  lib.cpp  lin_check.cpp  logger.cpp  minimization.cpp  minimization_smart.cpp  pretty_printer.cpp  scheduler.cpp  syscall_trap.cpp  verifying.cpp
runtime/include/: benchmarks.h  custom_round.h  lib.h  lincheck.h  lincheck_recursive.h  logger.h  ltest_atomic.h  minimization.h  minimization_smart.h  pct_strategy.h  pick_strategy.h  pretty_print.h  random_strategy.h  round_robin_strategy.h  scheduler.h  scheduler_fwd.h  stable_vector.h  strategy_verifier.h  syscall_trap.h  timer.h  value_wrapper.h  verifying.h  verifying_macro.h  wmm.h
scripts/: format_code.sh  rund.sh
src/: CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  format_code.sh  verify.py
src/codegen/: CMakeLists.txt  coropass.cpp  pass.cpp  utils.h  yieldpass.cpp
src/codegen/include/: utils.h
src/docs/: ui_design.md
src/runtime/: CMakeLists.txt  builders.cpp  generators.cpp  lib.cpp  lin_check.cpp  logger.cpp  pretty_printer.cpp  random_strategy.cpp  round_robin_strategy.cpp  run.cpp  scheduler.cpp  verifying.cpp
src/runtime/include/: CMakeLists.txt  checker.h  dumb_spec.h  generators.h  lib.h  lincheck.h  lincheck_dual.h  lincheck_recursive.h  logger.h  pct_strategy.h  pick_strategy.h  pretty_print.h  random_strategy.h  round_robin_strategy.h  scheduler.h  scheduler_class.h  stable_vector.h  uniform_strategy.h  verifying.h  verifying_macro.h
src/test/: CMakeLists.txt
src/test/codegen/: a.out  basic.cpp  class.cpp  my.ll
src/test/regression/: codegen_runner.cpp  conftest.py  find_task.cpp  find_task_args.cpp  find_task_init.cpp  requirements.txt  test_codegen.py  test_func.cpp  test_verifying.py  utils.py  verifying_runner.h
src/test/regression/testdata/: args.cpp  basic.ll  basic.yml  call.ll  call.yml  flow.cpp  generator.cpp  init_funcs.cpp  queue.cpp  restart.cpp  token.cpp
src/test/runtime/: CMakeLists.txt  lin_check_dual_test.cpp  lin_check_test.cpp  stackfulltask_mock.h
src/verifying/: CMakeLists.txt  README.md  bad_queue.cpp  macro.h  nice_queue.cpp  register.cpp  register_smart.cpp  run.cpp  verify.py
src/verifying/atomic_register/: spec.h  target.cpp
src/verifying/lib/: mutex.h
src/verifying/mutex_queue/: spec.h  target.cpp
src/verifying/nonlinear_queue/: spec.h  target.cpp
src/verifying/race_register/: spec.h  target.cpp
src/verifying/specs/: bounded_queue.h  coroutine_queue.h  queue.h  register.h
src/verifying/targets/: CMakeLists.txt  atomic_register.cpp  coroutine_queue.cpp  deadlock.cpp  fast_queue.cpp  mutex_queue.cpp  nonlinear_queue.cpp  race_register.cpp
switch-draft/: CMakeLists.txt  README.md  example.cpp  switch.cpp
switch-draft/switch_insert/: CMakeLists.txt  llvm_pass.cpp
syscall_intercept/: CMakeLists.txt  hook.cpp
test/runtime/: CMakeLists.txt  lin_check_test.cpp  stackfulltask_mock.h
verifying/: CMakeLists.txt  README.md
verifying/blocking/: CMakeLists.txt  folly_rwspinlock.cpp  mutexed_register.cpp  nonlinear_mutex.cpp  simple_mutex.cpp
verifying/blocking/verifiers/: mutex_verifier.h  shared_mutex_verifier.h
verifying/specs/: bounded_queue.h  mutex.h  queue.h  register.h  set.h  stack.h  unique_args.h
verifying/targets/: CMakeLists.txt  atomic_register.cpp  counique_args.cpp  counique_args.yml  deadlock.cpp  fast_queue.cpp  mutex_queue.cpp  nonlinear_ms_queue.cpp  nonlinear_queue.cpp  nonlinear_queue_with_custom_rounds.cpp  nonlinear_set.cpp  nonlinear_treiber_stack.cpp  race_register.cpp  unique_args.cpp  wmm.cpp
